--- a/bibliography.bib
+++ b/bibliography.bib
@@ -630,3 +630,60 @@ doi = {10.1109/EDUCON60312.2024.10578672}
   year={2019},
   publisher={Elsevier}
 }
+
+@inproceedings{zavgorodniaia2020measuring,
+  title={Measuring the cognitive load of learning to program: A replication study},
+  author={Zavgorodniaia, Albina and Duran, Rodrigo and Hellas, Arto and Seppala, Otto and Sorva, Juha},
+  booktitle={United Kingdom \& Ireland Computing Education Research conference.},
+  pages={3--9},
+  year={2020}
+}
+
+@article{schnotz2007reconsideration,
+  title={A reconsideration of cognitive load theory},
+  author={Schnotz, Wolfgang and K{\"u}rschner, Christian},
+  journal={Educational psychology review},
+  volume={19},
+  pages={469--508},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{chen2009cognitive,
+  title={Cognitive load theory: An empirical study of anxiety and task performance in language learning},
+  author={Chen, I and Chang, Chi-Cheng and others},
+  year={2009},
+  publisher={Universidad de Almer{\'\i}a}
+}
+
+@inproceedings{storey2005theories,
+  title={Theories, methods and tools in program comprehension: past, present and future},
+  author={Storey, M-A},
+  booktitle={13th International Workshop on Program Comprehension (IWPC'05)},
+  pages={181--191},
+  year={2005},
+  organization={IEEE}
+}
+
+
+@inproceedings{fekete2020comprehensive,
+  title={A comprehensive review on software comprehension models},
+  author={Fekete, Anett and Porkol{\'a}b, Zolt{\'a}n},
+  booktitle={Annales Mathematicae et Informaticae},
+  volume={51},
+  pages={103--111},
+  year={2020},
+  organization={Liceum University Press}
+}
+
+
+@article{von1995program,
+  title={Program comprehension during software maintenance and evolution},
+  author={Von Mayrhauser, Anneliese and Vans, A Marie},
+  journal={Computer},
+  volume={28},
+  number={8},
+  pages={44--55},
+  year={1995},
+  publisher={IEEE}
+}
